Major refactoring in assembly package.
Removed StoichiometrySet and organized things more rationally with a
hierarchy: Assembly - AssemblyGraph -< SubAssembly. Each SubAssembly
corresponds to one connected component and one stoichiometry.